Undo removal of Author data in f5ade7c1f8dc54c0316a56a4948ba477dfe2415e

--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -643,7 +643,7 @@
                                             <td>{{ res.last_updated|date:"U" }}</td>
                                             <td><!-- Needed for datatable to function properly --></td>
                                             <td>{{ res.created|date:"U" }}</td>
-                                            <td><!-- Needed for datatable to function properly --></td>
+                                            <td>{{ res.grantor.id }}</td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
