--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -632,9 +632,9 @@
                                                 <td>{{ res.first_creator.name }}</td>
                                             {% endif %}
                                             {# Date Created #}
-                                            <td>{{ res.created|date:"d M Y" }} {{ res.created|time }}</td>
+                                            <td>{{ res.created|date:"d M, Y" }} {{ res.created|time }}</td>
                                             {# Last Modified #}
-                                            <td>{{ res.last_updated|date:"d M Y" }} {{ res.last_updated|time }}</td>
+                                            <td>{{ res.last_updated|date:"d M, Y" }} {{ res.last_updated|time }}</td>
                                             <td><!-- Needed for datatable to function properly --></td>
                                             <td><!-- Needed for datatable to function properly --></td>
                                             <td><!-- Needed for datatable to function properly --></td>
