Fix collapse reference id

--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -467,7 +467,9 @@
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
                                         <span class="glyphicon glyphicon glyphicon-user"></span>
-                                        <a data-toggle="collapse" class="accordion-toggle" data-parent="#accordion" href="#filter">&nbsp;Shared by</a></h4>
+                                        <a data-toggle="collapse" class="accordion-toggle"
+                                           data-parent="#accordion" href="#filter-shared-by">&nbsp;Shared by</a>
+                                    </h4>
                                 </div>
                                 <div id="filter-shared-by" class="facet-list panel-collapse collapse in">
                                     <div class="panel-body">
