Set cursor poiter for Members filter items

--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -197,15 +197,15 @@
                             {% endif %}
                             <table id="members-filter" class="table-user-contributions table table-hover">
                                 <tbody>
-                                    <tr class="active" data-filter-by="all">
+                                    <tr class="active c-pointer" data-filter-by="all">
                                         <td><span>All</span></td>
                                         <td><span class="badge" data-filter-by='All'>0</span></td>
                                     </tr>
-                                     <tr data-filter-by="edit-user">
+                                    <tr class="c-pointer" data-filter-by="edit-user">
                                         <td><span>Owners</span></td>
                                         <td><span class="badge" data-filter-by='Owners'>0</span></td>
                                     </tr>
-                                    <tr data-filter-by="pending">
+                                    <tr class="c-pointer" data-filter-by="pending">
                                         <td><span>Pending</span></td>
                                         <td><span class="badge" data-filter-by='Pending'>0</span></td>
                                     </tr>
