Allow organizations to appear listed as First Author in Group page

--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -626,13 +626,7 @@
                                                 </strong>
                                             </td>
                                             {# First Author #}
-                                            {% if res.first_creator.description %}
-                                                <td>
-                                                    <a href="{{ res.first_creator.description }}">{{ res.first_creator.name }}</a>
-                                                </td>
-                                            {% else %}
-                                                <td>{{ res.first_creator.name }}</td>
-                                            {% endif %}
+                                            {{ res|resource_first_author }}
                                             {# Date Created #}
                                             <td>{{ res.created|date:"d M, Y" }} {{ res.created|time }}</td>
                                             {# Last Modified #}
