--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -3,21 +3,22 @@
 {% load hydroshare_tags %}
 
 {% block main %}
-
-
     <div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <h2 class="page-title">Collaborate</h2>
-        </div>
-        <div class="col-sm-3">
-            <a href="{% url 'groups' %}"><img src="{{ STATIC_URL }}/img/groups.png">GROUPS</a><br/>
-            Groups are for research teams to share resources members of those teams. Resources can be privately shared, within the group for specific audiences.
-            <br/>  <br>
-            <br>
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="page-title">Collaborate</h2>
+            </div>
+            <div class="col-sm-3">
+                <a href="{% url 'groups' %}"><img src="{{ STATIC_URL }}/img/groups.png">GROUPS</a><br />
+                Groups are for research teams to share resources members of those teams. Resources can be privately
+                shared, within the group for specific audiences.
+                <br /><br /><br />
 
-            <a href="{% url 'communities' %}"><img src="{{ STATIC_URL }}/img/communities/communities.jpg">COMMUNITIES</a><br/>
-            A Community is a collection of Groups that have something in common like being members of a large research network. Communities are designed around public data sharing and open access.<br><br>
+                <a href="{% url 'communities' %}"><img
+                        src="{{ STATIC_URL }}/img/communities/communities.jpg">COMMUNITIES</a><br/>
+                A Community is a collection of Groups that have something in common like being members of a large
+                research network. Communities are designed around public data sharing and open access.<br /><br />
+            </div>
         </div>
     </div>
 {% endblock %}
