--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -43,7 +43,7 @@
                                 <div class="group-preview-image group-preview-image-default" style="background-image: url({{ STATIC_URL }}img/home-page/step4.png)"></div>
                             {% endif %}
                             <div class="group-caption">
-                                <h3 class="group-name" style="overflow-y: auto"><a href="/group/{{ group.id }}">{{ group.name }}</a></h3>
+                                <h3 class="group-name" ><a href="/group/{{ group.id }}">{{ group.name }}</a></h3>
                                 <div class="group-purpose" style="overflow-y: auto">
                                     <p>{{ group.gaccess.purpose|linebreaks}}</p>
                                 </div>
