--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -9,7 +9,7 @@
                 <h2 class="page-title">Collaborate</h2>
             </div>
             <div class="col-sm-3">
-                <a href="{% url 'groups' %}"><img src="{{ STATIC_URL }}/img/groups.png">GROUPS</a><br />
+                <a href="{% url 'groups' %}"><img src="{{ STATIC_URL }}/img/groups.png" hspace="3px">GROUPS</a><br />
                 Groups are for research teams to share resources members of those teams. Resources can be privately
                 shared, within the group for specific audiences.
                 <br /><br /><br />
