Add group querystring filter

--- a/hs_core/templates/pages/communities.html
+++ b/hs_core/templates/pages/communities.html
@@ -59,15 +59,32 @@
                                                     <i class="list-group-item no-items-found">No resources have been
                                                         shared with this community yet.</i>
                                                 {% else %}
-                                                    {% for g in groups %}
-                                                        <li class="list-group-item">
-                                                            <label class="checkbox noselect"
-                                                                   for="{{ g.id }}">{{ g.name }}
-                                                                <input type="checkbox" id="{{ g.id }}" value="Click"
-                                                                       @click="updateContribs({{ g.id }})" checked/>
-                                                            </label>
-                                                        </li>
-                                                    {% endfor %}
+                                                    {% if grpfilter %}
+                                                        {% for g in groups %}
+                                                            <li class="list-group-item">
+                                                                <label class="checkbox noselect"
+                                                                       for="{{ g.id }}">{{ g.name }}
+                                                                    <input type="checkbox" id="{{ g.id }}" value="Click"
+                                                                           @click="updateContribs({{ g.id }})"
+                                                                    {% if grpfilter == g.name %}
+                                                                            checked
+                                                                    {% endif %}
+                                                                    />
+                                                                </label>
+                                                            </li>
+                                                        {% endfor %}
+                                                    {% else %}
+                                                        {% for g in groups %}
+                                                            <li class="list-group-item">
+                                                                <label class="checkbox noselect"
+                                                                       for="{{ g.id }}">{{ g.name }}
+                                                                    <input type="checkbox" id="{{ g.id }}" value="Click"
+                                                                           @click="updateContribs({{ g.id }})" checked/>
+                                                                </label>
+                                                            </li>
+                                                        {% endfor %}
+                                                    {% endif %}
+
                                                 {% endif %}
                                             </div>
                                         </div>
