--- a/theme/static/css/hs-file-icons.css
+++ b/theme/static/css/hs-file-icons.css
@@ -240,8 +240,9 @@
 }
 
 .fb-view-list .fb-stack-netcdf .fa-th-large {
-	font-size: 10px;
-	top: -4px;
+    font-size: 10px;
+    top: -9px;
+    left: -2px;
 }
 
 .fb-view-grid .fb-stack-refts .fa-line-chart, .fb-stack-refts .fa-line-chart {
