--- a/theme/static/css/hs-file-icons.css
+++ b/theme/static/css/hs-file-icons.css
@@ -261,8 +261,9 @@
 }
 
 .fb-view-list .fb-stack-shape .fa-globe {
-	font-size: 10px;
-	top: -4px;
+    font-size: 10px;
+    top: -3px;
+    left: -2px;
 }
 
 .fb-view-grid .fb-stack .fa-file-o {
