--- a/hs_core/templates/pages/communities.html
+++ b/hs_core/templates/pages/communities.html
@@ -48,7 +48,7 @@
                                         <h4 class="panel-title">
                                             <span class="glyphicon glyphicon glyphicon-user"></span>
                                             <a data-toggle="collapse" class="accordion-toggle" data-parent="#accordion"
-                                               href="#filter">&nbsp;Groups</a></h4>
+                                               href="#filter">&nbsp;Shared by</a></h4>
                                     </div>
                                     <div id="filter-shared-by" class="facet-list panel-collapse collapse in">
                                         <div class="panel-body">
