--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -11,7 +11,11 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="collaborate-nav">
-                        <a href="{% url "collaborate" %}" class="collaborate-nav-item">Find Groups</a>
+                        {% if settings.COMMUNITIES_ENABLED %}
+                            a href="{% url "groups" %}" class="collaborate-nav-item">Find Groups</a>
+                        {% else %}
+                            <a href="{% url "collaborate" %}" class="collaborate-nav-item">Find Groups</a>
+                        {% endif %}
                         <a href="{% url "my_groups" %}" class="collaborate-nav-item">My Groups</a>
                     </div>
                 </div>
