Add ajax request for Edit Author and Delete Author

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -852,7 +852,8 @@
                   "address": "{{ author.address|default:"" }}",
                   "phone": "{{ author.phone|default:"" }}",
                   "homepage": "{{ author.homepage|default:"" }}",
-                  "profileUrl": "{{ author.description|default:"" }}"
+                  "profileUrl": "{{ author.description|default:"" }}",
+                  "order": "{{ author.order }}"
               },
           {% endfor %}
       ];
