--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -11,8 +11,8 @@
                         {#                            {% for author in creators %}#}
                         {#                                {% include "includes/author-link.html" with author=author %}#}
                         {#                            {% endfor %}#}
-                        <a v-for="author in authors" data-toggle="modal"
-                           @click="selectedAuthor = author"
+                        <a v-for="(author, index) in authors" data-toggle="modal"
+                           @click="selectAuthor(author, index)"
                            class="author-preview"
                            data-target="#view-author-modal" href="#">
                             <template v-if="author.name">
@@ -33,9 +33,9 @@
                         </a>
 
                         <span class="authors-wrapper sortable">
-                            <span v-for="author in authors">
+                            <span v-for="(author, index) in authors">
                                 <a data-toggle="modal" class="author-preview" :title="'Edit ' + author.name"
-                                   @click="selectAuthor(author)" data-target="#edit-author-modal" href="#">
+                                   @click="selectAuthor(author, index)" data-target="#edit-author-modal" href="#">
                                     <template v-if="author.name">${ author.name }</template>
                                     <template v-else>${ author.organization }</template>
                                 </a>
@@ -443,7 +443,7 @@
                             <h4 class="modal-title" id="edit-creator"> Edit Author</h4>
                         </div>
 
-                        <div class="modal-body modal-body--delete">
+                        <div v-if="authors.length > 1" class="modal-body modal-body--delete">
                             <span title="Remove"
                                   data-toggle="collapse" data-target="#confirm-delete-author"
                                   class="glyphicon glyphicon-trash icon-button table-icon btn-remove"></span>
@@ -456,8 +456,8 @@
                                     <button type="button" class="btn btn-default space-top"
                                             data-dismiss="modal">Cancel
                                     </button>
-                                    <a @click="deleteAuthor(selectedAuthor)"
-                                       type="button" class="btn btn-danger btn-disable-after">
+                                    <a @click="deleteAuthor()"
+                                       type="button" class="btn btn-danger">
                                         Delete
                                     </a>
                                 </div>
@@ -471,80 +471,92 @@
                             <div class="modal-body">
                                 <div class="form-group">
                                     <fieldset>
-                                        <div class="control-group control-group--name">
+                                        {# NAME #}
+                                        <div v-if="isAuthorRequired" class="control-group control-group--name">
                                             <label for="creator-name" class="control-label requiredField">Name<span
                                                 class="asteriskField">*</span></label>
 
                                             <div class="controls">
-                                                <input v-model="selectedAuthor.name" id="creator-name"
+                                                <input v-model="selectedAuthor.author.name"
+                                                       :required="isAuthorRequired ? 'required' : 'false'"
+                                                       id="creator-name"
                                                        class="form-control input-sm textinput textInput"
                                                        maxlength="100">
                                             </div>
                                         </div>
 
-                                        <div class="control-group control-group--description">
+                                        {# PROFILE URL #}
+                                        <div v-if="isAuthorRequired" class="control-group control-group--description">
                                             <label for="creator-description" class="control-label">HydroShare User
                                                 Identifier (URL)</label>
 
                                             <div class="controls">
-                                                <input v-model="selectedAuthor.profileUrl" id="creator-description"
+                                                <input v-model="selectedAuthor.author.profileUrl" id="creator-description"
                                                        class="form-control input-sm urlinput"
                                                        maxlength="200" type="url" readonly>
                                             </div>
                                         </div>
 
+                                        {# ORGANIZATION #}
                                         <div class="control-group control-group--organization">
-                                            <label for="creator-organization" class="control-label">Organization<span
-                                                class="asteriskField">*</span></label>
+                                            <label for="creator-organization" class="control-label">Organization
+                                                <span v-if="!isAuthorRequired" class="asteriskField">*</span></label>
 
                                             <div class="controls">
-                                                <input v-model="selectedAuthor.organization" id="creator-organization"
+                                                <input v-model="selectedAuthor.author.organization" id="creator-organization"
+                                                       :class="{requiredField: !isAuthorRequired}"
+                                                       :required="isAuthorRequired ? false : 'required'"
                                                        type="text" maxlength="200"
                                                        class="form-control input-sm textinput textInput">
                                             </div>
                                         </div>
 
+                                        {# EMAIL #}
                                         <div class="control-group control-group--email">
                                             <label for="creator-email" class="control-label">Email</label>
 
                                             <div class="controls">
-                                                <input v-model="selectedAuthor.email" id="creator-email"
+                                                <input v-model="selectedAuthor.author.email" id="creator-email"
                                                        class="form-control input-sm emailinput"
                                                        maxlength="75" type="email">
                                             </div>
                                         </div>
 
+                                        {# ADDRESS #}
                                         <div class="control-group control-group--address">
                                             <label for="creator-address" class="control-label">Address</label>
 
                                             <div class="controls">
-                                                <input v-model="selectedAuthor.address" id="creator-address"
+                                                <input v-model="selectedAuthor.author.address" id="creator-address"
                                                        class="form-control input-sm textinput textInput"
                                                        maxlength="250" type="text">
                                             </div>
                                         </div>
 
+                                        {# PHONE #}
                                         <div class="control-group control-group--phone">
                                             <label for="creator-phone" class="control-label">Phone</label>
 
                                             <div class="controls">
-                                                <input v-model="selectedAuthor.phone" id="creator-phone"
+                                                <input v-model="selectedAuthor.author.phone" id="creator-phone"
                                                        class="form-control input-sm textinput textInput"
                                                        maxlength="25" type="text">
                                             </div>
                                         </div>
 
+                                        {# HOMEPAGE #}
                                         <div class="control-group control-group--homepage">
                                             <label for="creator-homepage" class="control-label">Homepage</label>
 
                                             <div class="controls">
-                                                <input v-model="selectedAuthor.homepage" id="creator-homepage"
+                                                <input v-model="selectedAuthor.author.homepage" id="creator-homepage"
                                                        class="form-control input-sm urlinput"
                                                        maxlength="200" type="url">
                                             </div>
                                         </div>
                                     </fieldset>
 
+                                    {# AUTHOR IDENTIFIERS #}
                                     <label class="control-label">Author Identifiers</label>
                                     <div class="modal-identifiers-container height-fix">
                                         {% include "includes/identifiers-form.html" with identifiers=author.identifiers %}
@@ -557,8 +569,10 @@
 
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                <button @click="updateAuthor(author)" type="submit"
-                                        class="btn btn-primary btn-disable-after-valid">Save changes
+                                <button @click="updateAuthor()"
+                                        type="button"
+{#                                        type="submit"#}
+                                        class="btn btn-primary">Save changes
                                 </button>
                             </div>
                         </form>
