--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -12,7 +12,7 @@
                 <div class="col-sm-12">
                     <div class="collaborate-nav">
                         {% if settings.COMMUNITIES_ENABLED %}
-                            a href="{% url "groups" %}" class="collaborate-nav-item">Find Groups</a>
+                            <a href="{% url "groups" %}" class="collaborate-nav-item">Find Groups</a>
                         {% else %}
                             <a href="{% url "collaborate" %}" class="collaborate-nav-item">Find Groups</a>
                         {% endif %}
