--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -11,10 +11,10 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="collaborate-nav">
-                        {% if settings.COMMUNITIES_ENABLED %}
-                            <a href="{% url "groups" %}" class="collaborate-nav-item">Find Groups</a>
-                        {% else %}
+                        {% if communities_enabled %}
                             <a href="{% url "collaborate" %}" class="collaborate-nav-item">Find Groups</a>
+                        {% else %}
+                            <a href="{% url "groups" %}" class="collaborate-nav-item">Find Groups</a>
                         {% endif %}
                         <a href="{% url "my_groups" %}" class="collaborate-nav-item">My Groups</a>
                     </div>
