Add frontend filter for names with commas

--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -35,7 +35,7 @@
                                        data-{{ name }}="{{ link }}"
                                             {% endfor %}>
                                         {% if author.name %}
-                                            {{ author.name }}
+                                            {{ author.name|name_without_commas }}
                                         {% else %}
                                             {{ author.organization }}
                                         {% endif %}
