--- a/theme/templates/includes/author-link.html
+++ b/theme/templates/includes/author-link.html
@@ -1,6 +1,8 @@
+{% load hydroshare_tags %}
+
 <a data-toggle="modal" class="author-preview"
    data-target="#view-author-modal" href="#"
-   data-name="{{ author.name|default:"" }}"
+   data-name="{{ author.name|name_without_commas|default:"" }}"
    data-email="{{ author.email|default:"" }}"
    data-organization="{{ author.organization|default:"" }}"
         {% for name, link in author.identifiers.items %}
@@ -11,7 +13,7 @@
    data-homepage="{{ author.homepage|default:"" }}"
    data-profileurl="{{ author.description|default:"" }}">
     {% if author.name %}
-        {{ author.name|default:"" }}
+        {{ author.name|name_without_commas|default:"" }}
     {% else %}
         {{ author.organization|default:"" }}
     {% endif %}
