--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1562,9 +1562,9 @@ body > .main-container {
     position: fixed;
     z-index: 999;
     margin-right: auto;
-    width: 50%;
+    width:14%;
     left: 50%;
-    margin-left: -25%;
+    /*margin-left: -25%;*/
     top: 60px;
 }
 
