--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -57,10 +57,9 @@
                         <div class="external-profiles">
                             <template v-for="(identifier, key) of user.identifiers">
                                 <a v-if="identifierAttributes.hasOwnProperty(key)"
-                                   :href="identifier"
+                                   :href="identifier" :title="identifierAttributes[key].title"
                                    class="identifier-icon" target="_blank"
-                                   data-toggle="tooltip" data-placement="top"
-                                   :title="identifierAttributes[key].title">
+                                   data-toggle="tooltip" data-placement="top">
 
                                     <img v-if="key === 'ResearchGateID'" class="hover-shadow"
                                          src="{{ STATIC_URL }}img/researcherID.png"
@@ -70,9 +69,9 @@
                                 </a>
 
                                 <a v-else :href="identifier" class="identifier-icon" target="_blank"
+                                   :title="key"
                                    data-toggle="tooltip"
-                                   data-placement="top"
-                                   :title="key">
+                                   data-placement="top">
                                     <i class="fa fa-address-card hover-shadow"></i>
                                 </a>
                             </template>
