make description a charfield not urlfield

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -116,7 +116,7 @@
 
                             <div class="modal-body" style="display:none;">
                                 <input maxlength="100" name="name" type="text">
-                                <input name="description" type="url">
+                                <input name="description" type="text">
                                 <input name="organization" type="text">
                                 <input name="email" type="email">
                                 <input maxlength="250" name="address" type="text">
