--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -345,7 +345,6 @@
                     <form method="POST" enctype="multipart/form-data">
 {#                        {% csrf_token %}#}
 {#                        <input name="resource-mode" type="hidden" value="edit">#}
-
                         <div class="modal-body">
                             <div class="form-group">
                                 <fieldset>
@@ -435,10 +434,39 @@
                                 </fieldset>
 
                                 {# AUTHOR IDENTIFIERS #}
-{#                                <label class="control-label">Author Identifiers</label>#}
-{#                                <div class="modal-identifiers-container height-fix">#}
-{#                                    {% include "includes/identifiers-form.html" with identifiers=author.identifiers %}#}
-{#                                </div>#}
+                                <label class="control-label">Author Identifiers</label>
+                                <div class="modal-identifiers-container height-fix">
+                                    <div class="edit-identifiers-container">
+                                        <div v-for="(identifier, index) in author.identifiers" class="well">
+                                            <div style="height:22px;">
+                                                <button @click="onDeleteIdentifier(index)" type="button"
+                                                        class="close">&times;</button>
+                                            </div>
+                                            <fieldset class="select-identifier-fieldset">
+                                                <label>Identifier Name</label>
+                                                <select v-model="identifier.identifierName"
+                                                        class="form-control select-identifier">
+                                                    <option v-for="ident in identifierDict"
+                                                            :disabled="hasIdentifier(ident.value)"
+                                                            :value="ident.value">
+                                                        ${ident.title}
+                                                    </option>
+                                                </select>
+                                            </fieldset>
+
+                                            <fieldset>
+                                                <label>Identifier Link</label>
+                                                <input v-model="identifier.identifierLink"
+                                                       class="form-control identifier-link">
+                                            </fieldset>
+                                        </div>
+                                    </div>
+
+                                    <button @click="onAddIdentifier"
+                                        type="button" class="btn btn-success">
+                                        <i class="fa fa-plus" aria-hidden="true"></i> Add New
+                                    </button>
+                                </div>
                             </div>
                         </div>
 
@@ -447,7 +475,7 @@
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button @click="$emit('update-author', author)"
+                            <button @click="onSaveAuthor"
                                     type="button"
     {#                                        type="submit"#}
                                     class="btn btn-primary">Save changes
