--- a/theme/templates/includes/author-link.html
+++ b/theme/templates/includes/author-link.html
@@ -2,6 +2,7 @@
    data-target="#view-author-modal" href="#"
    data-name="{{ author.name|default:"" }}"
    data-email="{{ author.email|default:"" }}"
+   data-order="{{ author.order }}"
    data-organization="{{ author.organization|default:"" }}"
         {% for name, link in author.identifiers.items %}
    data-{{ name }}="{{ link }}"
@@ -14,5 +15,5 @@
         {{ author.name|default:"" }}
     {% else %}
         {{ author.organization|default:"" }}
-    {% endif %}
+    {% endif %} ({{ author.order }})
 </a>
