--- a/theme/templates/includes/author-link.html
+++ b/theme/templates/includes/author-link.html
@@ -15,5 +15,5 @@
         {{ author.name|default:"" }}
     {% else %}
         {{ author.organization|default:"" }}
-    {% endif %} ({{ author.order }})
+    {% endif %}
 </a>
